--- a/public/acs-html/assets/scss/styles.scss
+++ b/public/acs-html/assets/scss/styles.scss
@@ -28,6 +28,30 @@ $desktop-width: 1024px;
 .container {
   max-width: 1200px;
 }
+#myBtn {
+  position: fixed;
+  display: none;
+  z-index: 999;
+  bottom: 100px;
+  right: 5px;
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  background: #009a4f;
+  color: #fff;
+  font-size: 26px;
+  line-height: 40px;
+  text-align: center;
+  opacity: 0.8;
+  img {
+    width: 100%;
+    height: 100%;
+  }
+  &:hover {
+    opacity: 1;
+  }
+}
+
 body {
   min-height: 100vh;
   margin: 0;
@@ -39,6 +63,21 @@ body {
   font-optical-sizing: auto;
   font-style: normal;
   box-sizing: border-box;
+}
+.contact input[type="submit"] {
+  border: none;
+  cursor: pointer;
+  outline: 0;
+  font-weight: 700;
+  margin-left: 90px;
+  width: auto;
+  background-color: #000;
+  color: #fff;
+  padding: 7px 14px;
+  font-family: "Roboto Condensed", sans-serif;
+  transition: all 0.3s ease;
+  font-size: 15px;
+  margin-bottom: 0;
 }
 p {
   margin: 0 0 3px;
@@ -80,11 +119,14 @@ h4 {
   overflow: hidden;
   padding-bottom: 10px;
   margin-bottom: 10px;
-  .descr {
-    h3 {
-      text-transform: uppercase;
-      margin-bottom: 8px;
-      line-height: 0.9em;
+  .col-9 {
+    padding-left: 0;
+    .descr {
+      h3 {
+        text-transform: uppercase;
+        margin-bottom: 8px;
+        line-height: 0.9em;
+      }
     }
   }
 }
@@ -113,18 +155,34 @@ h4 {
     border: 1px solid #009a4f;
   }
 }
+.navbar-toggler:focus {
+  text-decoration: none;
+  outline: 0;
+  box-shadow: none;
+}
+.navbar-toggler-icon {
+}
 header {
   background-color: rgba(255, 255, 255, 0.95);
   box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.08);
   @media (max-width: 810px) {
-    .navbar-brand-hide {
-      display: block !important;
-      width: 150px;
+    .navbar {
+      background-color: #078844;
+      .navbar-brand-hide {
+        display: block !important;
+        width: 150px;
+      }
+      .navbar-toggler {
+        border: none;
+        color: #fff;
+      }
     }
   }
+
   #navbarNav {
     .nav-main {
       position: relative;
+
       .nav-item {
         display: flex;
         align-items: center;
@@ -134,6 +192,10 @@ header {
           font-weight: 600;
           text-decoration: none;
           font-size: 15px;
+          color: black;
+          @media (max-width: 564px) {
+            color: white;
+          }
           &:hover {
             color: #da2028;
           }
@@ -169,7 +231,7 @@ header {
               border: none;
               background: green;
               color: #fff;
-              padding: 6.5px 20px;
+              padding: 7px 20px;
               display: block;
               width: 61px;
             }
@@ -184,7 +246,39 @@ header {
     }
   }
 }
-
+.btn-search-reponsive {
+  .btn_search_mobile_top_reponsive {
+    color: #fff;
+    padding: 3px;
+    border: none;
+    -webkit-appearance: button;
+    cursor: pointer;
+    width: 30px;
+    height: 30px;
+  }
+}
+.search_reponsive {
+  display: none;
+  padding-top: 22px;
+  width: 300px;
+  position: absolute;
+  right: 0;
+  top: 33px;
+  z-index: 99999;
+  .search-form-reponsive {
+    .btn_search_reponsive {
+      position: absolute;
+      top: 22px;
+      right: 0;
+      border: none;
+      background: green;
+      color: #fff;
+      padding: 8px 20px;
+      display: block;
+      width: 61px;
+    }
+  }
+}
 #content-anh {
   .item {
     margin-bottom: 30px;
@@ -221,6 +315,7 @@ section {
 
 .breadcum {
   background: #ebf2ff;
+
   .tt ::before {
     display: table;
     content: " ";
@@ -245,7 +340,6 @@ section {
     }
   }
 }
-
 .tt {
   line-height: 38px;
   color: #009a4f;
@@ -292,7 +386,6 @@ section {
       text-transform: uppercase;
       font-size: 29px;
       position: relative;
-      margin-bottom: 30px;
       font-weight: 700;
       text-align: center;
       padding-bottom: 0;
@@ -551,6 +644,9 @@ img {
   word-wrap: break-word;
   list-style: none;
   margin-right: 10px;
+  @media (max-width: 564px) {
+    margin-right: 0;
+  }
   margin-bottom: 30px;
   &:hover {
     background: #eee;
@@ -712,7 +808,6 @@ img {
   .content {
     .nav-tabs {
       border: none;
-      overflow-x: scroll;
       .nav-item {
         margin-left: 10px;
         .nav-link {
