--- a/public/acs-html/assets/scss/styles.scss
+++ b/public/acs-html/assets/scss/styles.scss
@@ -1300,3 +1300,11 @@ img {
   margin: 0px;
   height: auto;
 }
+.inputLoBan {
+  input {
+    text-align: center;
+    width: 80px;
+    padding-left: 17px;
+    border: 2px solid orange;
+  }
+}
